--- a/webapp/test/unit/unitTests.qunit.html
+++ b/webapp/test/unit/unitTests.qunit.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Unit tests for QA_REJECTION_SRV</title>
+	<title>Unit tests for qa_rejection_srv</title>
 	<script
 		id="sap-ui-bootstrap"
 		src="../../resources/sap-ui-core.js"
 		data-sap-ui-resource-roots='{
-			"QA_REJECTION_SRV": "../../",
+			"qa_rejection_srv": "../../",
 			"unit": "."
 		}'
 		data-sap-ui-async="true"
