--- a/webapp/index.html
+++ b/webapp/index.html
@@ -15,7 +15,7 @@
         src="resources/sap-ui-core.js"
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-resource-roots='{
-            "QA_REJECTION_SRV": "./"
+            "qa_rejection_srv": "./"
         }'
         data-sap-ui-on-init="module:sap/ui/core/ComponentSupport"
         data-sap-ui-compat-version="edge"
@@ -26,9 +26,9 @@
 <body class="sapUiBody sapUiSizeCompact" id="content">
     <div
         data-sap-ui-component
-        data-name="QA_REJECTION_SRV"
+        data-name="qa_rejection_srv"
         data-id="container"
-        data-settings='{"id" : "QA_REJECTION_SRV"}'
+        data-settings='{"id" : "qa_rejection_srv"}'
         data-handle-validation="true"
     ></div>
 </body>
